--- a/notes/内容总结.md
+++ b/notes/内容总结.md
@@ -1,1 +1,33 @@
-https://www.jianshu.com/p/280c6a6f2594
+<!-- https://www.jianshu.com/p/280c6a6f2594 -->
+
+## 1. 函数式编程
+
+学到了什么
+
+1. 知道除了面向过程，面向对象编程方式之外，还知道有函数式编程方式
+
+2. 以前只知道函数的高阶函数和闭包，现在知道了函数还有纯函数，柯里化函数以及函数组合，柯里化的作用可以缓存一些参数的作用，这个可以在项目种校验字段的时候用, 函数组合在项目种可以将多个函数的功能组合起来用。
+
+3. 通过了解 lodash 和 lodash/fp 模块,让我知道了字符串，对象，数组...更加便捷操作的方法，以及通过实现 lodash 库的方法，让我更加对纯函数和函数柯里化以及函数组合更加熟练的使用。
+
+4. 函子 Functor 对之前学习的内容总结起来一起使用
+
+不理解
+
+函子在实际开发种到底充当了什么角色 (是测试函数用的吗?)
+
+## 2. 异步编程
+
+学到了什么
+
+1. 异步编程的实现方式 (Event Loop 消息队列)
+2. 宏任务和微任务的区别
+3. promise 实现异步编程
+4. generator+co 库实现异步编程
+5. async+await 实现异步编程
+
+## 3. promise 源码的实现
+
+学到了什么
+
+1. 通过实现 promise 的原理，让我更加了解了 promise 的流程。
